Fix language multiselect action
Signed-off-by: GretaD <gretadoci@gmail.com>

--- a/apps/settings/css/settings.scss
+++ b/apps/settings/css/settings.scss
@@ -1455,11 +1455,15 @@ doesnotexist:-o-prefocus, .strengthify-wrapper {
 			.lastLogin {
 				min-width: $grid-col-min-width;
 
-				color: var(--color-text-dark);
-				vertical-align: baseline;
-				text-overflow: ellipsis;
-				overflow: hidden;
+				doesnotexist:-o-prefocus, .strengthify-wrapper {
+					color: var(--color-text-dark);
+					vertical-align: baseline;
+					text-overflow: ellipsis;
+				}
 			}
+			&:not(.row--editable) a {
+			overflow: hidden;
+		}
 
 			.groups,
 			.subadmins,
